taken from json file

--- a/events.html
+++ b/events.html
@@ -10,9 +10,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <button class="view">View</button>
-    <button class="Add">Add</button>
+  <nav>Cat Gallery</nav>
+  <div class= "container">
     <ul>
     </ul>
   </div>
