--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="container">
       <!-- allitems go inside this -->
     </div>
+
+
     <div class="modal">
       <div class="modal-content">
         <span class="cancel">&times;</span>
-        <div class='flex-container'>
           <img id='img-container' />
-          <iframe id='map-container'></iframe>
-        </div>
+          <div id='map-container'></div>
       </div>
     </div>
   </div>
