--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
 <body>
   <nav>Cat Gallery
   </nav>
+  <div>
+  <button class="viewBut">View</button>
+  <button class="addBut">Add</button>
+  </div>
+
   <div class='grid-container'>
     <span class='sort'>Sort By Categories</span>
     <select class="select"></select>
@@ -19,7 +24,7 @@
       <!-- allitems go inside this -->
     </div>
 
-
+<!-- modal for the full image -->
     <div class="modal">
       <div class="modal-content">
         <span class="cancel">&times;</span>
