--- a/public/form.html
+++ b/public/form.html
@@ -20,6 +20,10 @@
             <br>
             <input type="String" name="category">
             </br>
+            <label>Details:</label>
+            <br>
+            <input type="String" name="details">
+            </br>
             </br>
             <input type="file" name="imageupload" />
             </br>
