google map is working

--- a/public/form.html
+++ b/public/form.html
@@ -20,10 +20,8 @@
             <br>
             <input type="String" name="category">
             </br>
-            <label>Details:</label>
+            <input type="hidden" name="coordinates" >
             <br>
-            <input type="String" name="details">
-            </br>
             </br>
             <input type="file" name="imageupload" />
             </br>
