--- a/public/form.html
+++ b/public/form.html
@@ -10,8 +10,7 @@
     <button class="addBut">Add</button>
 
     <div class="grid-container">
-        <form method="POST" action="/addform" enctype="multipart/form-data"
-         onsubmit="setTimeout(function () { window.location.reload(); }, 10)">
+        <form method="POST" action="/addform" enctype="multipart/form-data">
             <label>Title:</label>
             </br>
             <input type="St
