ejs file is created

--- a/public/form.html
+++ b/public/form.html
@@ -25,10 +25,10 @@
                 </div>
               </nav>
 
-        <form method="POST" action="/api/photomodels" enctype="multipart/form-data">
+        <form method="POST" id="formName" action="/api/photomodels" enctype="multipart/form-data">
             <label>Title:</label>
             </br>
-            <input type="String" name="title">
+            <input type="String" name="title" >
             </br>
             <label>Category:</label>
             <br>
@@ -43,9 +43,6 @@
             <button type="submit" name="submit">Submit</button>
 
         </form>
-         
-    
-    <script type="text/javascript" src="events.js"></script>
+        <script type="text/javascript" src="events.js"></script>
 </body>
-
 </html>
